# adv_cpp_ML_homework_2021

./: CMakeLists.txt  README.md
.github/workflows/: CI.yml
include/: deviation.h  dish.h  fridge.h  input.h
src/: deviation.c  fridge.c  input.c  main.c
tests/: tests.cpp
